[metadata]
name = delaunay_watershed_2d
version = 0.1.0
author = Sacha Ichbiah
author_email = sacha.ichbiah@college-de-france.fr
description = Geometrical reconstruction of cell assemblies from instance segmentations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sacha-ichbiah/delaunay_watershed_2d
project_urls =
    Team website = https://www.turlierlab.com/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = scikit-image>=0.18.3
                   numpy>=1.21.6
                   scipy>=1.4.1
                   polyscope>=1.2.0
                   matplotlib>=3.3.1
                   networkx>=2.5.1 
[options.packages.find]
where = src
